listmonk/base/listmonk-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listmonk
  namespace: listmonk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: listmonk
  template:
    metadata:
      labels:
        app: listmonk
    spec:
      serviceAccountName: listmonk
      containers:
        - name: listmonk
          image: ghcr.io/ericnovales/listmonk_ericmod:v1.4.4
          ports:
            - containerPort: 9000
          command: ["sh", "-c"]
          args:
            - >
              ./listmonk --install --idempotent --yes --config '' &&
              ./listmonk --upgrade --yes --config '' &&
              ./listmonk --config ''
          volumeMounts:
            - name: uploads
              mountPath: /listmonk/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: listmonk-uploads-pvc
