listmonk/base/listmonk-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: listmonk
  namespace: listmonk
spec:
  selector:
    app: listmonk
  ports:
    - port: 9000
      targetPort: 9000
