listmonk/base/networkpolicy-allow-ingress-from-ingress-nginx-to-listmonk.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-nginx-to-listmonk
  namespace: listmonk
spec:
  podSelector:
    matchLabels:
      app: listmonk
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 9000
